--- a/LemonTriTest/src/app/app.component.html
+++ b/LemonTriTest/src/app/app.component.html
@@ -2,9 +2,9 @@
 <div class="lemon-tri-nav">
   <h1>Choosing your profile</h1>
 
-  <div>
-    <a routerLinkActive="active" routerLink="leader"><button>Leader</button></a>
-    <a routerLinkActive="active" routerLink="teammate"><button>Teammate</button></a>
+  <div class="d-flex gap-3">
+    <a routerLinkActive="active" routerLink="leader"><button type="button" class="btn btn-primary p-1">Leader</button></a>
+    <a routerLinkActive="active" routerLink="teammate"><button type="button" class="btn btn-primary p-2">Teammate</button></a>
   </div>
 </div>
 
