--- a/LemonTriTest/src/app/teammate/modal/edit-waste/edit-waste.component.html
+++ b/LemonTriTest/src/app/teammate/modal/edit-waste/edit-waste.component.html
@@ -32,7 +32,7 @@
               </ng-container>
             </select>
           </div>
-          <input type="number">
+          <input type="number" [(ngModel)]="quantity" [ngModelOptions]="{standalone: true}">
         </div>
       </div>
     </form>
