--- a/LemonTriTest/src/app/teammate/teammate/teammate.component.html
+++ b/LemonTriTest/src/app/teammate/teammate/teammate.component.html
@@ -1,40 +1,43 @@
-<h2>Aujourd'hui tournée {{ tour.name }}</h2>
-<div>
-  <div>Teammate : {{ tour.teammate?.name }}</div>
-</div>
-
-<h3>Liste des pesés</h3>
-<div *ngFor="let step of tour?.steps; let index = index">
-  <div>{{ index + 1 }}. {{ step?.client?.name }} - {{ step?.name }}</div>
-
+<div class="teammate-container">
+  <h2>Aujourd'hui tournée {{ tour.name }}</h2>
   <div>
-    <table>
-      <thead>
-        <th>Nb</th>
-        <th>Contenants</th>
-        <th>Matières</th>
-        <th>Pesée</th>
-        <th>Pds</th>
-        <th></th>
-        <th></th>
-      </thead>
-      <tbody>
-        <tr *ngFor="let waste of step?.wastes">
-          <td>{{ waste?.quantity }}</td>
-          <td>{{ waste?.container }}</td>
-          <td>{{ waste?.material }}</td>
-          <td> {{ waste?.quality }} </td>
-          <td>{{ waste?.weighed }}kg</td>
-          <td>
-            <button (click)="openEditModal(step, waste)">Edit</button>
-            <button (click)="deleteWaste(step, waste)">Delete</button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-
+    <div>Teammate : {{ tour.teammate?.name }}</div>
+  </div>
+  
+  <h3>Liste des pesés</h3>
+  <div class="step-container" *ngFor="let step of tour?.steps; let index = index">
+    <div class="step-title">{{ index + 1 }}. {{ step?.client?.name }} - {{ step?.name }}</div>
+  
     <div>
-      <button (click)="openEditModal(step, undefined)">Weight another waste</button>
+      <table class="table-primary">
+        <thead>
+          <th>Nb</th>
+          <th>Contenants</th>
+          <th>Matières</th>
+          <th>Pesée</th>
+          <th>Pds</th>
+          <th></th>
+          <th></th>
+        </thead>
+        <tbody>
+          <tr *ngFor="let waste of step?.wastes">
+            <td>{{ waste?.quantity }}</td>
+            <td>{{ waste?.container }}</td>
+            <td>{{ waste?.material }}</td>
+            <td> {{ waste?.quality }} </td>
+            <td>{{ waste?.weighed }}kg</td>
+            <td class="d-flex gap-1">
+              <button  type="button" class="btn btn-secondary" (click)="openEditModal(step, waste)">Edit</button>
+              <button type="button" class="btn btn-danger" (click)="deleteWaste(step, waste)">Delete</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+  
+      <div class="add-waste-container">
+        <button type="button" class="btn btn-primary" (click)="openEditModal(step, undefined)">Weight another waste</button>
+      </div>
     </div>
   </div>
 </div>
+
